--- a/headBasic.html
+++ b/headBasic.html
@@ -9,7 +9,7 @@
  <link rel="stylesheet" href="../css/sample.css"/>
  <script>
  function myFuntion(){
-  document.getElementByld("user_id_1").innerHTML="무궁화 삼천리 화려강산";
+  document.getElementById("user_id_1").innerHTML="무궁화 삼천리 화려강산";
  }
  </script>
  <meta name="description"content="HTML5test페이지"/>
