--- a/basicDList.html
+++ b/basicDList.html
@@ -9,7 +9,7 @@
  <dl>
   <dt>type="1"</dt>
   <dd>숫자표시, 1,2,3,... </dd>
-  <dt>type="A"<./dt>
+  <dt>type="A"</dt>
   <dd>대문자표시, A,B,C,... </dd>
  </dl>
 </body>
