--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html> <!-- basicList.html -->
 <html>
 <head>
@@ -23,13 +22,17 @@
   </li>
   <li>3주차
    <ol>
+   <li><a href="https://xowlty.github.io/html5/headBasic.html" target="_blank">headBasic</a></li>
+   <li><a href="https://xowlty.github.io/html5/bodyBasic.html" target="_blank">bodyBasic</a></li>
+   <li><a href="https://xowlty.github.io/html5/koreaAnthem3.html" target="_blank">koreaAnthem3</a></li>
    <li><a href="https://xowlty.github.io/html5/basicHeading.html" target="_blank">basicHeading</a></li>
    <li><a href="https://xowlty.github.io/html5/basicPBrHr.html" target="_blank">basicPBrHr</a></li>
    <li><a href="https://xowlty.github.io/html5/basicChar.html" target="_blank">basicChar</a></li>
    <li><a href="https://xowlty.github.io/html5/koreaAnthem4.html" target="_blank">koreaAnthem4</a></li>
-   <li><a href="https://xowlty.github.io/html5/bodyBasic.html" target="_blank">bodyBasic</a></li>
-   <li><a href="https://xowlty.github.io/html5/koreaAnthem3.html" target="_blank">koreaAnthem3</a></li>
-   <li><a href="https://xowlty.github.io/html5/headBasic.html" target="_blank">headBasic</a></li>
+   <li><a href="https://xowlty.github.io/html5/basicList.html" target="_blank">basicList</a></li>
+   <li><a href="https://xowlty.github.io/html5/basicDList.html" target="_blank">basicDList</a></li>
+   <li><a href="https://xowlty.github.io/html5/koreaAnthem5.html" target="_blank">koreaAnthem5</a></li>
+   <li><a href="https://xowlty.github.io/html5/koreaAnthem6.html" target="_blank">koreaAnthem6</a></li>
    <li><a href="https://xowlty.github.io/html5/basicTable.html" target="_blank">basicTable</a></li>
    <li><a href="https://xowlty.github.io/html5/tableSpan.html" target="_blank">tableSpan</a></li>
    <li><a href="https://xowlty.github.io/html5/advTable.html" target="_blank">advTable</a></li>
