--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <li>2주차
    <ol>
    <li><a href="https://xowlty.github.io/html5/divSpan.html" target="_blank">basicHtml</a></li>
-   <li><a href="https://xowlty.github.io/html5/globalAttr.html" target="_blank">globalAttr</a></li>
+   <li><a href="https://xowlty.github.io/html5/basicPDivSpan.html" target="_blank">globalAttr</a></li>
    <li><a href="https://xowlty.github.io/html5/globalEvent.html" target="_blank">globalEvent</a></li>
    <li><a href="https://xowlty.github.io/html5/2019031302.html" target="_blank">2019031302</a></li>
    </ol>
