--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
   </li>
   <li>4주차
    <ol>
-   <li><a href="https://xowlty.github.io/html5/divSpan.html" target="_blank">basicHtml</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicPDivSpan.html" target="_blank">globalAttr</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicDiv.html" target="_blank">globalEvent</a></li>
-   <li><a href="https://xowlty.github.io/html5/advDiv.html" target="_blank">2019031302</a></li>
+   <li><a href="https://xowlty.github.io/html5/divSpan.html" target="_blank">divSpan</a></li>
+   <li><a href="https://xowlty.github.io/html5/basicPDivSpan.html" target="_blank">basicPDivSpan</a></li>
+   <li><a href="https://xowlty.github.io/html5/basicDiv.html" target="_blank">basicDiv</a></li>
+   <li><a href="https://xowlty.github.io/html5/advDiv.html" target="_blank">advDiv</a></li>
    </ol>
   </li>
  </ul><hr/>
