--- a/html5/basicSemantic.html
+++ b/html5/basicSemantic.html
@@ -11,8 +11,28 @@
  nav ul {margin:0; padding:0;}
  nav ul li {display:inline; margin:5px;}
  aside ul {margin:0; padding:0;}
- aside ul li {display:block; margin:5px}
+ aside ul li {disploay:block; margin:5px}
  </style>
  <title>시멘틱 학습</title>
 </head>
-</html>
+<body>
+ <header>
+  <h2>실습을 환영합니다</h2></header>
+ <nav>
+  <ul>
+   <li id="home">홈</li>
+   <li id="intro">소개</li>
+   <li id="server">서버</li>
+  </ul></nav>
+ <section id="displayArea">
+ </section>
+ <aside>
+  <ul>
+   <li>GooglePlus</li>
+   <li>FacebookOne</li>
+   <li>TwitterYou</li>
+  </ul>
+ </aside>
+ <footer>
+   <p>&copy;20XX Made by Korea. All rights reserved,</p> </footer>
+</body></html>
