--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
    <li><a href="https://xowlty.github.io/html5/basicPDivSpan.html" target="_blank">basicPDivSpan</a></li>
    <li><a href="https://xowlty.github.io/html5/basicDiv.html" target="_blank">basicDiv</a></li>
    <li><a href="https://xowlty.github.io/html5/advDiv.html" target="_blank">advDiv</a></li>
+   <li><a href="https://xowlty.github.io/html5/basicSemantic.html" target="_blank">basicSemantic</a></li>
    </ol>
   </li>
  </ul><hr/>
