--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
    <li><a href="https://xowlty.github.io/html5/basicDiv.html" target="_blank">basicDiv</a></li>
    <li><a href="https://xowlty.github.io/html5/advDiv.html" target="_blank">advDiv</a></li>
    <li><a href="https://xowlty.github.io/html5/basicSemantic.html" target="_blank">basicSemantic</a></li>
+   <li><a href="https://xowlty.github.io/html5/basicModel.html" target="_blank">basicModel</a></li>
    </ol>
   </li>
  </ul><hr/>
