--- a/html5/basicDiv.html
+++ b/html5/basicDiv.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta charset="utf-8"/>
- <meta name="viewport" cpmtemt="width=device-width, initial-scale=1"/>
+ <meta name="viewport" content="width=device-width, initial-scale=1"/>
  <style>
   div#division1 {border-style:solid; border-width:1px;border-color:blue;color:blue}
   div#division2{border-style:solid; border-width:1px;border-color:red;color:red}
