--- a/html5/basicSemantic.html
+++ b/html5/basicSemantic.html
@@ -34,5 +34,5 @@
   </ul>
  </aside>
  <footer>
-   <p>&copy;20XX Made by Korea. All rights reserved,</p> </footer>
+   <p>&copy;20XX Made by Korea. All rights reserved.</p> </footer>
 </body></html>
