--- a/index.html
+++ b/index.html
@@ -14,41 +14,45 @@
   </li>
   <li>2주차
    <ol>
-   <li><a href="https://xowlty.github.io/html5/basicHtml.html" target="_blank">basicHtml</a></li>
-   <li><a href="https://xowlty.github.io/html5/globalAttr.html" target="_blank">globalAttr</a></li>
-   <li><a href="https://xowlty.github.io/html5/globalEvent.html" target="_blank">globalEvent</a></li>
-   <li><a href="https://xowlty.github.io/html5/2019031302.html" target="_blank">2019031302</a></li>
+   <li><a href="https://xowlty.github.io/week02/basicHtml.html" target="_blank">basicHtml</a></li>
+   <li><a href="https://xowlty.github.io/week02/globalAttr.html" target="_blank">globalAttr</a></li>
+   <li><a href="https://xowlty.github.io/week02/globalEvent.html" target="_blank">globalEvent</a></li>
+   <li><a href="https://xowlty.github.io/week02/2019031302.html" target="_blank">2019031302</a></li>
    </ol>
   </li>
   <li>3주차
    <ol>
-   <li><a href="https://xowlty.github.io/html5/headBasic.html" target="_blank">headBasic</a></li>
-   <li><a href="https://xowlty.github.io/html5/bodyBasic.html" target="_blank">bodyBasic</a></li>
-   <li><a href="https://xowlty.github.io/html5/koreaAnthem3.html" target="_blank">koreaAnthem3</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicHeading.html" target="_blank">basicHeading</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicPBrHr.html" target="_blank">basicPBrHr</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicChar.html" target="_blank">basicChar</a></li>
-   <li><a href="https://xowlty.github.io/html5/koreaAnthem4.html" target="_blank">koreaAnthem4</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicList.html" target="_blank">basicList</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicDList.html" target="_blank">basicDList</a></li>
-   <li><a href="https://xowlty.github.io/html5/koreaAnthem5.html" target="_blank">koreaAnthem5</a></li>
-   <li><a href="https://xowlty.github.io/html5/koreaAnthem6.html" target="_blank">koreaAnthem6</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicTable.html" target="_blank">basicTable</a></li>
-   <li><a href="https://xowlty.github.io/html5/tableSpan.html" target="_blank">tableSpan</a></li>
-   <li><a href="https://xowlty.github.io/html5/advTable.html" target="_blank">advTable</a></li>
-   <li><a href="https://xowlty.github.io/html5/advTable1.html" target="_blank">advTable1</a></li>
-   <li><a href="https://xowlty.github.io/html5/tableHw.html" target="_blank">tableHw</a></li>
-   <li><a href="https://xowlty.github.io/html5/TimeTable.html" target="_blank">TimeTable</a></li>
+   <li><a href="https://xowlty.github.io/week03/headBasic.html" target="_blank">headBasic</a></li>
+   <li><a href="https://xowlty.github.io/week03/bodyBasic.html" target="_blank">bodyBasic</a></li>
+   <li><a href="https://xowlty.github.io/week03/koreaAnthem3.html" target="_blank">koreaAnthem3</a></li>
+   <li><a href="https://xowlty.github.io/week03/basicHeading.html" target="_blank">basicHeading</a></li>
+   <li><a href="https://xowlty.github.io/week03/basicPBrHr.html" target="_blank">basicPBrHr</a></li>
+   <li><a href="https://xowlty.github.io/week03/basicChar.html" target="_blank">basicChar</a></li>
+   <li><a href="https://xowlty.github.io/week03/koreaAnthem4.html" target="_blank">koreaAnthem4</a></li>
+   <li><a href="https://xowlty.github.io/week03/basicList.html" target="_blank">basicList</a></li>
+   <li><a href="https://xowlty.github.io/week03/basicDList.html" target="_blank">basicDList</a></li>
+   /ol>
+  </li>
+  <li>3-2주차
+   <ol>
+   <li><a href="https://xowlty.github.io/week03-2/koreaAnthem5.html" target="_blank">koreaAnthem5</a></li>
+   <li><a href="https://xowlty.github.io/week03-2/koreaAnthem6.html" target="_blank">koreaAnthem6</a></li>
+   <li><a href="https://xowlty.github.io/week03-2/basicTable.html" target="_blank">basicTable</a></li>
+   <li><a href="https://xowlty.github.io/week03-2/tableSpan.html" target="_blank">tableSpan</a></li>
+   <li><a href="https://xowlty.github.io/week03-2/advTable.html" target="_blank">advTable</a></li>
+   <li><a href="https://xowlty.github.io/week03-2/advTable1.html" target="_blank">advTable1</a></li>
+   <li><a href="https://xowlty.github.io/week03-2/tableHw.html" target="_blank">tableHw</a></li>
+   <li><a href="https://xowlty.github.io/week03-2/TimeTable.html" target="_blank">TimeTable</a></li>
    </ol>
   </li>
   <li>4주차
    <ol>
-   <li><a href="https://xowlty.github.io/html5/divSpan.html" target="_blank">divSpan</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicPDivSpan.html" target="_blank">basicPDivSpan</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicDiv.html" target="_blank">basicDiv</a></li>
-   <li><a href="https://xowlty.github.io/html5/advDiv.html" target="_blank">advDiv</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicSemantic.html" target="_blank">basicSemantic</a></li>
-   <li><a href="https://xowlty.github.io/html5/basicModel.html" target="_blank">basicModel</a></li>
+   <li><a href="https://xowlty.github.io/week04/divSpan.html" target="_blank">divSpan</a></li>
+   <li><a href="https://xowlty.github.io/week04/basicPDivSpan.html" target="_blank">basicPDivSpan</a></li>
+   <li><a href="https://xowlty.github.io/week04/basicDiv.html" target="_blank">basicDiv</a></li>
+   <li><a href="https://xowlty.github.io/week04/advDiv.html" target="_blank">advDiv</a></li>
+   <li><a href="https://xowlty.github.io/week04/basicSemantic.html" target="_blank">basicSemantic</a></li>
+   <li><a href="https://xowlty.github.io/week04/basicModel.html" target="_blank">basicModel</a></li>
    </ol>
   </li>
  </ul><hr/>
