--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
    <li><a href="https://xowlty.github.io/week04/basicSemantic.html" target="_blank">basicSemantic</a></li>
    <li><a href="https://xowlty.github.io/week04/basicModel.html" target="_blank">basicModel</a></li>
    <li><a href="https://xowlty.github.io/week04/anchor1.html" target="_blank">anchor1</a></li>
-   <li><a href="https://xowlty.github.io/week04/basicPDivSpan.html" target="_blank">basicPDivSpan</a></li>
-   <li><a href="https://xowlty.github.io/week04/basicDiv.html" target="_blank">basicDiv</a></li>
+   <li><a href="https://xowlty.github.io/week04/advAnchor.html" target="_blank">advAnchor</a></li>
+   <li><a href="https://xowlty.github.io/week04/basicSemantic1.html" target="_blank">basicSemantic1</a></li>
    <li><a href="https://xowlty.github.io/week04/advDiv.html" target="_blank">advDiv</a></li>
    <li><a href="https://xowlty.github.io/week04/basicSemantic.html" target="_blank">basicSemantic</a></li>
    <li><a href="https://xowlty.github.io/week04/basicModel.html" target="_blank">basicModel</a></li>
