--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
    <li><a href="https://xowlty.github.io/week04/anchor1.html" target="_blank">anchor1</a></li>
    <li><a href="https://xowlty.github.io/week04/advAnchor.html" target="_blank">advAnchor</a></li>
    <li><a href="https://xowlty.github.io/week04/basicSemantic1.html" target="_blank">basicSemantic1</a></li>
-   <li><a href="https://xowlty.github.io/week04/advDiv.html" target="_blank">advDiv</a></li>
-   <li><a href="https://xowlty.github.io/week04/basicSemantic.html" target="_blank">basicSemantic</a></li>
-   <li><a href="https://xowlty.github.io/week04/basicModel.html" target="_blank">basicModel</a></li>
+   <li><a href="https://xowlty.github.io/week04/basicImage.html" target="_blank">basicImage</a></li>
+   <li><a href="https://xowlty.github.io/week04/basicSemantic2.html" target="_blank">basicSemantic2</a></li>
+   <li><a href="https://xowlty.github.io/week04/ismap.html" target="_blank">ismap</a></li>
+   <li><a href="https://xowlty.github.io/week04/form_action.jsp.html" target="_blank">form_action.jsp</a></li>
    </ol>
   </li>
 
