--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    <li><a href="https://xowlty.github.io/week03-2/TimeTable.html" target="_blank">TimeTable</a></li>
    </ol>
   </li>
-  <li>4주차
+  <li id="week04">4주차
    <ol>
    <li><a href="https://xowlty.github.io/week04/divSpan.html" target="_blank">divSpan</a></li>
    <li><a href="https://xowlty.github.io/week04/basicPDivSpan.html" target="_blank">basicPDivSpan</a></li>
