--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
  <h1 id="aList">이정은</h1>
  <ul style="list-style-type:circle">
-  <li>1주차
+  <li id="week01">1주차
    <ol>
     <li><a href="https://xowlty.github.io/index0.html" target="_blank">index0</a></li>
    </ol>
   </li>
-  <li>2주차
+  <li id="week02">2주차
    <ol>
    <li><a href="https://xowlty.github.io/week02/basicHtml.html" target="_blank">basicHtml</a></li>
    <li><a href="https://xowlty.github.io/week02/globalAttr.html" target="_blank">globalAttr</a></li>
@@ -20,7 +20,7 @@
    <li><a href="https://xowlty.github.io/week02/2019031302.html" target="_blank">2019031302</a></li>
    </ol>
   </li>
-  <li>3주차
+  <li id="week03">3주차
    <ol>
    <li><a href="https://xowlty.github.io/week03/headBasic.html" target="_blank">headBasic</a></li>
    <li><a href="https://xowlty.github.io/week03/bodyBasic.html" target="_blank">bodyBasic</a></li>
@@ -33,7 +33,7 @@
    <li><a href="https://xowlty.github.io/week03/basicDList.html" target="_blank">basicDList</a></li>
    </ol>
   </li>
-  <li>3-2주차
+  <li id="week03-2">3-2주차
    <ol>
    <li><a href="https://xowlty.github.io/week03-2/koreaAnthem5.html" target="_blank">koreaAnthem5</a></li>
    <li><a href="https://xowlty.github.io/week03-2/koreaAnthem6.html" target="_blank">koreaAnthem6</a></li>
