--- a/week05/대전대학교.html
+++ b/week05/대전대학교.html
@@ -7,22 +7,22 @@
 <b>건물을 클릭하세요</b><br/>
 <img src="tour_map05.jpg"border=0 usemap="#area">
 <map name="area">
- <area alt='남문' shape="rect" target="_blank" coords='27,365,62,415' href="1.html">
- <area alt='기초과학관' shape="rect" coords='169,314,279,407' href="2.html">
- <area alt='공학관' coords='244,402,322,448' href="3.html">
- <area alt='응용과학관' coords='341,361,430,490' href="4.html">
- <area alt='충남' coords='67,121,115,143' href="chnam.html">
- <area alt='충북' coords='115,120,158,140' href="chbuk.html">
- <area alt='대전' target="_blank" coords='56,148,124,169' href="daejeon.html">
- <area alt='경북' coords='159,125,202,151' href="kyungbuk.html">
- <area alt='대구' coords='146,154,205,180' href="daegu.html">
- <area alt='전북' coords='85,168,132,194' href="jeonbuk.html">
- <area alt='경남' coords='132,183,177,209' href="kyungnam.html">
- <area alt='울산' coords='187,179,259,197' href="ulsan.html">
- <area alt='부산' coords='181,199,254,227' href="busan.html">
- <area alt='광주' coords='30,195,103,215' href="kwangju.html">
- <area alt='전남' coords='82,214,142,238' href="jeonnam.html">
- <area alt='제주' coords='58,252,109,272' href="jeju.html">
+<area alt = "남문" target="_blank" coords='29, 357, 67, 417' href ="1.html">
+<area alt = "기초과학관" target="_blank" coords='170, 318, 279, 407' href ="2.html">
+<area alt = "공학관" target="_blank" shape="poly" coords='297, 393, 327, 405, 328, 445, 318, 454, 359, 472, 359, 510, 350, 519, 244, 486, 244, 445' href ="3.html">
+<area alt = "응용과학관" target="_blank" shape="poly" coords='357, 395, 371, 380, 394, 378, 401, 371, 436, 386, 436, 438, 362, 511, 362, 472, 337, 461, 337,452, 356, 432' href ="4.html">
+<area alt = "공학실험관" target="_blank" shape="poly" coords='289, 380, 303, 365, 349, 386, 350, 425, 336, 439, 328, 436, 327, 406, 298, 393, 289, 401' href ="5.html">
+<area alt = "지혜의길" target="_blank" shape="poly" coords='188, 477, 202, 473, 292, 519, 508, 532, 503, 542, 342, 540, 256,520, 188, 478' href ="6.html">
+<area alt = "학생회관" target="_blank" shape="poly" coords='466, 402, 525, 428, 523, 477, 479, 508, 430, 491, 446, 421' href="7.html">
+<area alt = "선봉의광장" target="_blank" shape="poly" coords='421,499,467,523,452,529,432,530,417,518,418,502' href ="8.html">
+<area alt = "C-Lab(창의학습관)" target="_blank" shape="rect" coords='367,575,434,640' href ="9.html">
+<area alt = "창학관" target="_blank" shape="rect" coords='543,452,651,566' href ="10.html">
+<area alt = "테니스장" target="_blank" shape="poly" coords='499,644,593,681,548,733,460,690' href ="11.html">
+<area alt = "MACC센터" target="_blank" shape="poly" coords='635,647,723,683,721,708,730,713,661,795,575,757,577,710' href ="12.html">
+<area alt = "렉처홀" target="_blank" shape="poly" coords='679,593,771,631,771,651,787,657,769,687,659,643,660,608' href ="13.html">
+<area alt = "정문(동문)" target="_blank" shape="rect" coords='719,749,751,785' href ="14.html">
+<area alt = "드래곤볼" target="_blank" shape="poly" coords='888,718,1059,780,1085,805,1090,842,1057,879,997,895,797,821,776,795,783,757,834,724' href ="15.html">
+<area alt = "상징의광장" target="_blank" shape="poly" coords='908,607,941,623,920,658,880,642' href ="16.html"> 
  <area shape="default" noref>
 </map>
 </body>
