--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
    <li><a href="https://xowlty.github.io/week04/ismap.html" target="_blank">ismap</a></li>
    </ol>
   </li>
+  <li id="week05">5주차
+   <ol>
+    <li><a href="https://xowlty.github.io/week05/imageMap.html" target="_blank">imageMap</a></li>
+    <li><a href="https://xowlty.github.io/week05/seoul.html" target="_blank">seoul</a></li>
+    <li><a href="https://xowlty.github.io/week05/daejeon.html" target="_blank">daejeon</a></li>
+    <li><a href="https://xowlty.github.io/week05/basicAudio.html" target="_blank">basicAudio</a></li>
+    <li><a href="https://xowlty.github.io/week05/basicVideo.html" target="_blank">basicVideo</a></li>
+    <li><a href="https://xowlty.github.io/week05/basicSemantic3.html" target="_blank">basicSemantic3</a></li>
+    <li><a href="https://xowlty.github.io/week05/anchor2.html" target="_blank">anchor2</a></li>
+   </ol>
+  </li>
  </ul><hr/>
 </body>
 </html>
