--- a/week05/대전대학교.html
+++ b/week05/대전대학교.html
@@ -23,6 +23,24 @@
 <area alt = "정문(동문)" target="_blank" shape="rect" coords='719,749,751,785' href ="14.html">
 <area alt = "드래곤볼" target="_blank" shape="poly" coords='888,718,1059,780,1085,805,1090,842,1057,879,997,895,797,821,776,795,783,757,834,724' href ="15.html">
 <area alt = "상징의광장" target="_blank" shape="poly" coords='908,607,941,623,920,658,880,642' href ="16.html"> 
+<area alt = "지산도서관" target="_blank" shape="poly" coords='794,476,816,456,924,514,922,554,939,560,878,626,750,581,771,561,773,509,' href ="17.html"> 
+<area alt = "일신정" target="_blank" shape="poly" coords='692,434,706,450' href ="18.html"> 
+<area alt = "30주년기념관" target="_blank" shape="poly" coords='867,344,885,368,887,393,966,414,968,451,937,491,817,459,806,423,849,372' href ="19.html"> 
+<area alt = "혜화문화관" target="_blank" shape="poly" coords='1000,454,1083,441,1106,551,1007,538' href ="20.html"> 
+<area alt = "물의광장" target="_blank" shape="poly" coords='1100,483,1130,486,1156,460,1170,464,1145,496,1100,495' href ="21.html"> 
+<area alt = "제2생활관" target="_blank" shape="poly" coords='1169,428,1251,434,1337,401,1349,411,1347,446,1325,455,1366,455,1373,518,1218,521,1219,490,1171,480,1167,440' href ="22.html"> 
+<area alt = "국제생활관(제3생활관)" target="_blank" shape="poly" coords='1206,314,1240,285,1256,294,1260,312,1272,313,1277,325,1297,325,1314,339,1311,397,1240,400,1205,374' href ="23.html"> 
+<area alt = "인문사회관" target="_blank" shape="poly" coords='994,369,1037,308,1067,316,1068,337,1105,351,1101,413,1048,410,1023,432,995,427' href ="24.html"> 
+<area alt = "국제화거리" target="_blank" shape="poly" coords='1135,348,1173,369,1217,399,1217,431,1206,432,1215,416,1199,391,1162,370' href ="25.html"> 
+<area alt = "제1생활관" target="_blank" shape="poly" coords='981,229,1090,260,1093,318,970,292,969,248' href ="26.html">
+<area alt = "문무관" target="_blank" shape="poly" coords='995,164,1081,223,1083,254,977,222,977,203' href ="27.html">
+<area alt = "서문" target="_blank" shape="poly" coords='923,157,934,166,923,176,908,166' href ="28.html">
+<area alt = "한의학관" target="_blank" shape="poly" coords='820,217,864,234,888,247,890,300,880,311,841,303,809,353,779,351,779,293' href ="29.html">
+<area alt = "미래광장" target="_blank" shape="poly" coords='830,31,974,116,951,130,812,42' href ="30.html">
+<area alt = "산학협력관" target="_blank" shape="poly" coords='803,116,822,110,856,114,877,126,878,153,862,170,783,156,784,133' href ="31.html">
+<area alt = "융합과학관" target="_blank" shape="poly" coords='913,186,966,191,968,238,961,246,928,248,907,281,894,285,892,244,869,236,871,215' href ="32.html">
+<area alt = "제4생활관" target="_blank" shape="poly" coords='1185,241,1196,246,1196,315,1157,339,1140,331,1142,260' href ="33.html">
+<area alt = "레지던설 칼리지(신축중)" target="_blank" shape="poly" coords='210,517,249,540,185,574,182,611,101,571,104,520,121,512,136,518,138,544,179,528' href ="34.html"> 
  <area shape="default" noref>
 </map>
 </body>
