--- a/week05/대전대학교.html
+++ b/week05/대전대학교.html
@@ -24,7 +24,7 @@
 <area alt = "드래곤볼" target="_blank" shape="poly" coords='888,718,1059,780,1085,805,1090,842,1057,879,997,895,797,821,776,795,783,757,834,724' href ="15.html">
 <area alt = "상징의광장" target="_blank" shape="poly" coords='908,607,941,623,920,658,880,642' href ="16.html"> 
 <area alt = "지산도서관" target="_blank" shape="poly" coords='794,476,816,456,924,514,922,554,939,560,878,626,750,581,771,561,773,509,' href ="17.html"> 
-<area alt = "일신정" target="_blank" shape="poly" coords='692,434,706,450' href ="18.html"> 
+<area alt = "일신정" target="_blank" shape="rect" coords='692,434,706,450' href ="18.html"> 
 <area alt = "30주년기념관" target="_blank" shape="poly" coords='867,344,885,368,887,393,966,414,968,451,937,491,817,459,806,423,849,372' href ="19.html"> 
 <area alt = "혜화문화관" target="_blank" shape="poly" coords='1000,454,1083,441,1106,551,1007,538' href ="20.html"> 
 <area alt = "물의광장" target="_blank" shape="poly" coords='1100,483,1130,486,1156,460,1170,464,1145,496,1100,495' href ="21.html"> 
