--- a/week05/2.html
+++ b/week05/2.html
@@ -1,7 +1,7 @@
 <!doctype html> <!-- 2.html -->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>남문</title>
+<title></title>
 </head>
 <body>
 <h3>기초과학관</h3>
