--- a/week05/20.html
+++ b/week05/20.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--20.html-->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
-<title>HTML5대전대학교 실습</title>
+<title>혜화문화관</title>
 </head>
 <body>
 <h3>혜화문화관</h3>
