--- a/week05/26.html
+++ b/week05/26.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--26.html-->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
-<title>HTML5대전대학교 실습</title>
+<title>제1생활관</title>
 </head>
 <body>
 <h3>제1생활관</h3>
