--- a/week05/27.html
+++ b/week05/27.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--27.html-->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
-<title>HTML5대전대학교 실습</title>
+<title>문무관</title>
 </head>
 <body>
 <h3>문무관</h3>
