--- a/week05/29.html
+++ b/week05/29.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--29.html-->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
-<title>HTML5대전대학교 실습</title>
+<title>한의학관</title>
 </head>
 <body>
 <h3>한의학관</h3>
