--- a/week05/31.html
+++ b/week05/31.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--31.html-->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
-<title>HTML5대전대학교 실습</title>
+<title>산학협력관</title>
 </head>
 <body>
 <h3>산학협력관</h3>
