--- a/week05/32.html
+++ b/week05/32.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--32.html-->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
-<title>HTML5대전대학교 실습</title>
+<title>융합과학관</title>
 </head>
 <body>
 <h3>융합과학관</h3>
