--- a/week05/34.html
+++ b/week05/34.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--34.html-->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
-<title>HTML5대전대학교 실습</title>
+<title>레지던설칼리지</title>
 </head>
 <body>
 <h3>레지던설칼리지</h3>
