--- a/week05/세계지도.html
+++ b/week05/세계지도.html
@@ -12,6 +12,11 @@
 <area alt="칠레" target="_blank" shape="poly" coords='252,448,266,468,259,495,278,588,293,594,289,601,276,589,267,573,269,566,266,558,259,548,250,452' href="칠레.html">
 <area alt="아이슬란드" target="_blank" shape="rect" coords='469,87,493,98' href="아이슬란드.html">
 <area alt="뉴질랜드" target="_blank" shape="poly" coords='1132,569,1190,531,1197,539,1138,573' href="뉴질랜드.html">
+<area alt = "이집트" target="_blank" shap=rect coords='629,234,666,272' href ="Egypt.html">
+<area alt = "예멘" target="_blank" shape=poly coords='717,297,735,290,740,297,706,315,699,297,705,294' href ="Yemen.html">
+<area alt = "우루과이" target="_blank" shape=poly coords='311,503,329,516,321,522,310,519,307,513' href ="Uruguay.html">
+<area alt = "독일" target="_blank" shape=poly coords='574,136,583,137,585,147,576,151,582,159,570,164,560,163,562,158,556,153,562,138' href ="Germany.html">
+<area alt = "대한민국" target="_blank" shape=poly coords='1010,203,1020,213,1013,219,1005,207' href ="Republic of Korea.html">
 <area shape="default" noref>
 </map>
 </body>
