--- a/week05/Egypt.html
+++ b/week05/Egypt.html
@@ -1,7 +1,7 @@
 <!doctype html> <!-- Egypt.html-->
 <html><head><meta charset="utf-8"/>
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
-<title>HTML5세계지도 이미지맵 실습</title>
+<title></title>
 </head>
 <body>
 <p>이집트를 클릭하셨습니다.</p>
