--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <li><a href="https://xowlty.github.io/week05/basicSemantic3.html" target="_blank">basicSemantic3</a></li>
     <li><a href="https://xowlty.github.io/week05/anchor2.html" target="_blank">anchor2</a></li>
     <li><a href="https://xowlty.github.io/week05/대전대학교.html" target="_blank">대전대학교</a></li>
+    <li><a href="https://xowlty.github.io/week05/세계지도.html" target="_blank">세계지도</a></li>
    </ol>
   </li>
  </ul><hr/>
