--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <ul style="list-style-type:circle">
   <li id="week01">1주차
    <ol>
-    <li><a href="https://xowlty.github.io/index0.html" target="_blank">index0</a></li>
+    <li><a href="https://xowlty.github.io/week01/index0.html" target="_blank">index0</a></li>
    </ol>
   </li>
   <li id="week02">2주차
