--- a/week06/formRadio1..html
+++ b/week06/formRadio1..html
@@ -10,7 +10,7 @@
   <input id="malex"type="radio" name="gender" value="male" checked/>
   <label for="femalex">여자</label>
   <input type="radio" id="femalex" name="gender" value="female"/>
-  <botton type="submit">등록</button>
+  <button type="submit">등록</button>
 </fieldset></form>
 </section>
 </body></html>
