--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
     <li><a href="https://xowlty.github.io/week05/세계지도.html" target="_blank">세계지도</a></li>
    </ol>
   </li>
+  <li id="week06">6주차
+   <ol>
+    <li><a href="https://xowlty.github.io/week06/formText1.html" target="_blank">formText1</a></li>
+    <li><a href="https://xowlty.github.io/week06/formRadio1.html" target="_blank">formRadio1</a></li>
+   </ol>
+  </li>
  </ul><hr/>
 </body>
 </html>
