--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
    <ol>
     <li><a href="https://xowlty.github.io/week06/formText1.html" target="_blank">formText1</a></li>
     <li><a href="https://xowlty.github.io/week06/formRadio1.html" target="_blank">formRadio1</a></li>
+    <li><a href="https://xowlty.github.io/week06/formCheckbox1.html" target="_blank">formCheckbox1</a></li>
    </ol>
   </li>
  </ul><hr/>
