--- a/week06/formCheckbox1.html
+++ b/week06/formCheckbox1.html
@@ -9,7 +9,7 @@
   <label for="fishing">낚시</label>
   <input type="checkbox" id="fishing" name="hobby" value="fishing" checked/>
   <label for="singing">노래</label>
-  <input type="checkbox" id="singing" name="hobby" value="fsinging"/>
+  <input type="checkbox" id="singing" name="hobby" value="singing"/>
   <label for="reading">독서</label>
   <input type="checkbox" id="reading" name="hobby" value="reading"/>
   <button type="submit">등록</button>
