--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     <li><a href="https://xowlty.github.io/week06/formRadio1.html" target="_blank">formRadio1</a></li>
     <li><a href="https://xowlty.github.io/week06/formCheckbox1.html" target="_blank">formCheckbox1</a></li>
     <li><a href="https://xowlty.github.io/week06/formSearch1.html" target="_blank">formSearch1</a></li>
+    <li><a href="https://xowlty.github.io/week06/formDateTime1.html" target="_blank">formDateTime1</a></li>
+    <li><a href="https://xowlty.github.io/week06/formEmailAuto1.html" target="_blank">formEmailAuto1</a></li>
    </ol>
   </li>
  </ul><hr/>
