--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <li><a href="https://xowlty.github.io/week06/formSearch1.html" target="_blank">formSearch1</a></li>
     <li><a href="https://xowlty.github.io/week06/formDateTime1.html" target="_blank">formDateTime1</a></li>
     <li><a href="https://xowlty.github.io/week06/formEmailAuto1.html" target="_blank">formEmailAuto1</a></li>
+    <li><a href="https://xowlty.github.io/week06/formFormaction1.html" target="_blank">formFormaction1</a></li>
    </ol>
   </li>
  </ul><hr/>
