--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
     <li><a href="https://xowlty.github.io/week06/formDateTime1.html" target="_blank">formDateTime1</a></li>
     <li><a href="https://xowlty.github.io/week06/formEmailAuto1.html" target="_blank">formEmailAuto1</a></li>
     <li><a href="https://xowlty.github.io/week06/formFormaction1.html" target="_blank">formFormaction1</a></li>
+    <li><a href="https://xowlty.github.io/week06/formSelect1.html" target="_blank">formSelect1</a></li>
+    <li><a href="https://xowlty.github.io/week06/formMselect1.html" target="_blank">formMselect1</a></li>
+    <li><a href="https://xowlty.github.io/week06/formTextarea1.html" target="_blank">formTextarea1</a></li>
    </ol>
   </li>
  </ul><hr/>
