--- a/week05/anchor2.html
+++ b/week05/anchor2.html
@@ -3,7 +3,7 @@
 <style>
  header, nav, section, article, aside, footer
  {border:1px solid gray; margin:5px; padding:8px;width:1000px;}
- headering { width:990px; height:200px;}
+ header img { width:990px; height:200px;}
  section {width:1000px; float:left;}
  section section {width:975px; float:left;}
  section section video { position:relative; top: 10px; left:100px; height:300px; width:700px; }
