--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
     <li><a href="https://xowlty.github.io/week06/formSelect1.html" target="_blank">formSelect1</a></li>
     <li><a href="https://xowlty.github.io/week06/formMselect1.html" target="_blank">formMselect1</a></li>
     <li><a href="https://xowlty.github.io/week06/formTextarea1.html" target="_blank">formTextarea1</a></li>
+    <li><a href="https://xowlty.github.io/week06/basicSemantic4.html" target="_blank">basicSemantic4</a></li>
+    <li><a href="https://xowlty.github.io/week06/basicSemanticMember1.html" target="_blank">basicSemanticMember1</a></li>
+    <li><a href="https://xowlty.github.io/week06/anchor2.html" target="_blank">anchor2</a></li>
+    <li><a href="https://xowlty.github.io/week05/jspintro.html" target="_blank">jspintro</a></li>
+    <li><a href="https://xowlty.github.io/week05/reservation2.html" target="_blank">reservation2</a></li>
    </ol>
   </li>
  </ul><hr/>
