--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <li><a href="https://xowlty.github.io/week06/basicSemanticMember1.html" target="_blank">basicSemanticMember1</a></li>
     <li><a href="https://xowlty.github.io/week06/anchor2.html" target="_blank">anchor2</a></li>
     <li><a href="https://xowlty.github.io/week05/jspintro.html" target="_blank">jspintro</a></li>
+    <li><a href="https://xowlty.github.io/week05/reservation.html" target="_blank">reservation</a></li>
     <li><a href="https://xowlty.github.io/week05/reservation2.html" target="_blank">reservation2</a></li>
    </ol>
   </li>
