Update and rename reservation.html to reservation1.html

--- a/week06/reservation1.html
+++ b/week06/reservation1.html
@@ -1,4 +1,4 @@
-<!doctype html> <!-- reservation.html -->
+<!doctype html> <!-- reservation1.html -->
 <html><head><meta charset="uft-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>음식점 예약 화면</title></head>
 <body>
