--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <li><a href="https://xowlty.github.io/week06/formMselect1.html" target="_blank">formMselect1</a></li>
     <li><a href="https://xowlty.github.io/week06/formTextarea1.html" target="_blank">formTextarea1</a></li>
     <li><a href="https://xowlty.github.io/week06/basicSemantic4.html" target="_blank">basicSemantic4</a></li>
-    <li><a href="https://xowlty.github.io/week05/reservation.html" target="_blank">reservation</a></li>
+    <li><a href="https://xowlty.github.io/week05/reservation.html" target="_blank">reservation1</a></li>
     <li><a href="https://xowlty.github.io/week05/reservation2.html" target="_blank">reservation2</a></li>
    </ol>
   </li>
