--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
     <li><a href="https://xowlty.github.io/week05/reservation2.html" target="_blank">reservation2</a></li>
    </ol>
   </li>
+  <li id="week07">7주차
+   <ol>
+    <li><a href="https://xowlty.github.io/week06/basicCssIntro.html" target="_blank">basicCssIntro</a></li>
+    <li><a href="https://xowlty.github.io/week06/basicSimple1.html" target="_blank">basicSimple1</a></li>
+    <li><a href="https://xowlty.github.io/week06/embed1.html" target="_blank">embed1</a></li>
+    <li><a href="https://xowlty.github.io/week06/inline1.html" target="_blank">inline1</a></li>
+    <li><a href="https://xowlty.github.io/week06/outstyle1.html" target="_blank">outstyle1</a></li>
+   </ol>
+  </li>
  </ul><hr/>
 </body>
 </html>
