--- a/week06/oliveyoung.html
+++ b/week06/oliveyoung.html
@@ -17,5 +17,5 @@
    <option value="네일케어">네일케어</option>
    <option value="립메이크업">립메이크업</option>
    <option value="아이메이크업" selected>아이메이크업</option></select>
-  <button type="submit">등록</button></fieldset></form>
+  <button type="submit">장바구니담기</button></fieldset></form>
 </section></body></html>
