--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
     <li><a href="https://xowlty.github.io/week06/embed1.html" target="_blank">embed1</a></li>
     <li><a href="https://xowlty.github.io/week06/inline1.html" target="_blank">inline1</a></li>
     <li><a href="https://xowlty.github.io/week06/outstyle1.html" target="_blank">outstyle1</a></li>
+    <li><a href="https://xowlty.github.io/week06/sampleDom.html" target="_blank">sampleDom</a></li>
+    <li><a href="https://xowlty.github.io/week06/htmlDom.html" target="_blank">htmlDom</a></li>
+    <li><a href="https://xowlty.github.io/week06/member1.html" target="_blank">member1</a></li>
    </ol>
   </li>
  </ul><hr/>
