--- a/week07/Alcol.html
+++ b/week07/Alcol.html
@@ -41,7 +41,7 @@ else if(obj.value == "e") var k = alcol_e;
 <option value="d">칵테일(10위까지)</option>
 <option value="e">보드카(10위까지)</option>
 </select>
-<label for="alcol">총기종류</label>
+<label for="alcol">술 </label>
 <select id="alcolx" name="alcol"></select>
 </fieldset>
 </section>
