--- a/week06/Alcol.html
+++ b/week06/Alcol.html
@@ -34,7 +34,7 @@ else if(obj.value == "e") {var k = alcol_e; alcol="보드카(10위까지)"}
 
     function gett(ftm){
     
-      document.getElementById("getd").innerHTML= alcol + "의 " + ftm.value + "을(를) 마실거야!";
+      document.getElementById("getd").innerHTML= alcol + " " + ftm.value + "을(를) 마실거야!";
     
     }
     </script>
