--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <li><a href="https://xowlty.github.io/week06/basicSemantic4.html" target="_blank">basicSemantic4</a></li>
     <li><a href="https://xowlty.github.io/week06/reservation1.html" target="_blank">reservation1</a></li>
     <li><a href="https://xowlty.github.io/week06/reservation2.html" target="_blank">reservation2</a></li>
-    <li><a href="https://xowlty.github.io/week06/oliveyoung.html" target="_blank">oliveyoung</a></li>
+    <li><a href="https://xowlty.github.io/week06/Alcol.html" target="_blank">Alcol</a></li>
    </ol>
   </li>
   <li id="week07">7주차
@@ -105,6 +105,14 @@
     <li><a href="https://xowlty.github.io/week07/member1.html" target="_blank">member1</a></li>
    </ol>
   </li>
+    <li id="week08">8주차
+   <ol>
+    <li><a href="https://xowlty.github.io/week07/selectortag.html" target="_blank">selectortag</a></li>
+    <li><a href="https://xowlty.github.io/week07/selectorcls.html" target="_blank">selectorcls</a></li>
+    <li><a href="https://xowlty.github.io/week07/selectorid.html" target="_blank">selectorid</a></li>
+   </ol>
+  </li>
+  
  </ul><hr/>
 </body>
 </html>
