--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
     <li><a href="https://xowlty.github.io/week08/selectortag.html" target="_blank">selectortag</a></li>
     <li><a href="https://xowlty.github.io/week08/selectorcls.html" target="_blank">selectorcls</a></li>
     <li><a href="https://xowlty.github.io/week08/selectorid.html" target="_blank">selectorid</a></li>
+    <li><a href="https://xowlty.github.io/week08/pseudoselector.html" target="_blank">pseudoselector</a></li>
+    <li><a href="https://xowlty.github.io/week08/pseudoelmt.html" target="_blank">pseudoelmt</a></li>
+    <li><a href="https://xowlty.github.io/week08/complexDesc.html" target="_blank">complexDesc</a></li>
+    <li><a href="https://xowlty.github.io/week08/complexChild.html" target="_blank">complexChild</a></li>
+    <li><a href="https://xowlty.github.io/week08/complexBro.html" target="_blank">complexBro</a></li>
    </ol>
   </li>
   
