Update and rename pseudoDesc.html to complexDesc.html

--- a/week08/complexDesc.html
+++ b/week08/complexDesc.html
@@ -1,4 +1,4 @@
-<!doctype><!-- pseudoDesc.html -->
+<!doctype><!-- complexDesc.html -->
 <html><head>
 <meta charset="utf-8"/>
  <title>복합선택자 후손 실습</title>
