--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
     <li><a href="https://xowlty.github.io/week08/complexDesc.html" target="_blank">complexDesc</a></li>
     <li><a href="https://xowlty.github.io/week08/complexChild.html" target="_blank">complexChild</a></li>
     <li><a href="https://xowlty.github.io/week08/complexBro.html" target="_blank">complexBro</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssText1.html" target="_blank">cssText1</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssText2.html" target="_blank">cssText2</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssFont1.html" target="_blank">cssFont1</a></li>
    </ol>
   </li>
   
