--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
     <li><a href="https://xowlty.github.io/week08/cssText1.html" target="_blank">cssText1</a></li>
     <li><a href="https://xowlty.github.io/week08/cssText2.html" target="_blank">cssText2</a></li>
     <li><a href="https://xowlty.github.io/week08/cssFont1.html" target="_blank">cssFont1</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssWidthHeight1.html" target="_blank">cssWidthHeight1</a></li>
+    
    </ol>
   </li>
   
