--- a/index.html
+++ b/index.html
@@ -119,7 +119,14 @@
     <li><a href="https://xowlty.github.io/week08/cssText2.html" target="_blank">cssText2</a></li>
     <li><a href="https://xowlty.github.io/week08/cssFont1.html" target="_blank">cssFont1</a></li>
     <li><a href="https://xowlty.github.io/week08/cssWidthHeight1.html" target="_blank">cssWidthHeight1</a></li>
-    
+    <li><a href="https://xowlty.github.io/week08/cssBg1.html" target="_blank">cssBg1</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssBorder1.html" target="_blank">cssBorder1</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssMargin1.html" target="_blank">cssMargin1</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssPadding1.html" target="_blank">cssPadding1</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssBox1.html" target="_blank">cssBox1</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssBox2.html" target="_blank">cssBox2</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssBox3.html" target="_blank">cssBox3</a></li>
+    <li><a href="https://xowlty.github.io/week08/cssBox4.html" target="_blank">cssBox4</a></li>
    </ol>
   </li>
   
