--- a/hw/rwd4.html
+++ b/hw/rwd4.html
@@ -2,6 +2,21 @@
  <html><head><meta charset="utf-8"/> 
 <meta name="viewport"content="width=device-width,initial-scale=1"/>
 <link rel="stylesheet" href="rwd4.css"/>
+<style>
+*{ box-sizing:border-box; padding:0; margin:0; }
+.row::after { content:""; clear:both; display: table; }
+[class*="col-"]{ float:left; padding:10px;}
+.header, .footer{background-color:lightgray; color:blue; padding:10px;}
+.menu ul, .banner ul{list-style-type:none;}
+.menu li{background-color:pink; color:black; padding:10px; margin-bottom:10px; box-shadow:0.1px 3px gray; }
+.menu li:hover{background-color:red;}
+.banner li {border:2px solid black; padding:10px; margin-bottom:10px; box-shadow:0.1px 3px gray;}
+.banner li img{width:30%; vertical-align:middle;}
+/* for mobile*/
+[class*="col-"]{width:100%;}
+@media only screen and (min-width: 600px){ .col-m-3{width:25%;} .col-m-9{width:75%;} .col-m-12{width:100%;} }
+@media only screen and (min-width: 768px){.col-3{width:25%;} .col-6{width:50%;}}
+</style>
 <title>RWD실습</title></head>
 <body><header class="header"><h2>한국의도시</h2></header>
 <div class="row"></div>
