--- a/hw/rwd4.html
+++ b/hw/rwd4.html
@@ -32,7 +32,7 @@
 </picture>
 </section>
 <aside class="col-3 col-m-12 banner">
-<ul><li><img src="flag.png">한국</li><li><img src="flag.png">Korea</li></ul></aside>
+<ul><li><img src="taegeuk.png">한국</li><li><img src="taegeuk.png">Korea</li></ul></aside>
 </div><div class="row"></div>
 <footer class="footer"><h4>Copyright20XX Korea.</h4></footer>
 </body></html> 
