--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -7,83 +7,43 @@
 <head>
 
 	<meta charset="UTF-8" />
-
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<title>Blueprint: Multi-Level Menu</title>
-
 	<meta name="description" content="Blueprint: A basic template for a responsive multi-level menu" />
-
 	<meta name="keywords" content="blueprint, template, html, css, menu, responsive, mobile-friendly" />
-
 	<meta name="author" content="Codrops" />
-
 	<link rel="shortcut icon" href="favicon.ico">
-
 	<!-- food icons -->
-
-	<link rel="stylesheet" type="text/css" href="css/organicfoodicons.css" />
-
+	<link rel="stylesheet" type="text/css" href="organicfoodicons.css" />
 	<!-- demo styles -->
-
-	<link rel="stylesheet" type="text/css" href="css/demo.css" />
-
+	<link rel="stylesheet" type="text/css" href="demo.css" />
 	<!-- menu styles -->
-
-	<link rel="stylesheet" type="text/css" href="css/component.css" />
-
-	<script src="js/modernizr-custom.js"></script>
-
+	<link rel="stylesheet" type="text/css" href="component.css" />
+	<script src="modernizr-custom.js"></script>
 </head>
-
-
-
 <body>
-
 	<!-- Main container -->
-
 	<div class="container">
-
 		<!-- Blueprint header -->
-
 		<header class="bp-header cf">
-
 			<div class="dummy-logo">
-
 				<div class="dummy-icon foodicon foodicon--coconut"></div>
-
 				<h2 class="dummy-heading">Fooganic</h2>
-
 			</div>
-
 			<div class="bp-header__main">
-
 				<span class="bp-header__present">Blueprint <span class="bp-tooltip bp-icon bp-icon--about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span>
-
 				<h1 class="bp-header__title">Multi-Level Menu</h1>
-
 				<nav class="bp-nav">
-
 					<a class="bp-nav__item bp-icon bp-icon--prev" href="http://tympanus.net/Blueprints/PageStackNavigation/" data-info="previous Blueprint"><span>Previous Blueprint</span></a>
-
 					<!--a class="bp-nav__item bp-icon bp-icon--next" href="" data-info="next Blueprint"><span>Next Blueprint</span></a-->
-
 					<a class="bp-nav__item bp-icon bp-icon--drop" href="http://tympanus.net/codrops/?p=25521" data-info="back to the Codrops article"><span>back to the Codrops article</span></a>
-
 					<a class="bp-nav__item bp-icon bp-icon--archive" href="http://tympanus.net/codrops/category/blueprints/" data-info="Blueprints archive"><span>Go to the archive</span></a>
-
 				</nav>
-
 			</div>
-
 		</header>
-
 		<button class="action action--open" aria-label="Open Menu"><span class="icon icon--menu"></span></button>
-
 		<nav id="ml-menu" class="menu">
-
 			<button class="action action--close" aria-label="Close Menu"><span class="icon icon--cross"></span></button>
 
 			<div class="menu__wrap">
@@ -236,11 +196,11 @@
 
 	<!-- /view -->
 
-	<script src="js/classie.js"></script>
+	<script src="classie.js"></script>
 
-	<script src="js/dummydata.js"></script>
+	<script src="dummydata.js"></script>
 
-	<script src="js/main.js"></script>
+	<script src="main.js"></script>
 
 	<script>
 
