--- a/hw/kkkkkk.html
+++ b/hw/kkkkkk.html
@@ -11,11 +11,11 @@
 	<meta name="author" content="Codrops" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- food icons -->
-	<link rel="stylesheet" type="text" href="organicfoodicons.css" />
+	<link rel="stylesheet" type="text/css" href="organicfoodicons.css" />
 	<!-- demo styles -->
-	<link rel="stylesheet" type="text" href="demo.css" />
+	<link rel="stylesheet" type="text/css" href="demo.css" />
 	<!-- menu styles -->
-	<link rel="stylesheet" type="text" href="component.css" />
+	<link rel="stylesheet" type="text/css" href="component.css" />
 	<script src="modernizr-custom.js"></script>
 </head>
 
