--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -68,8 +68,8 @@
 				
 				<!-- Submenu 2 -->
 				<ul data-menu="submenu-2" id="submenu-2" class="menu__level" tabindex="-1" role="menu" aria-label="경력">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#"></a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-2-1" aria-owns="submenu-2-1" href="#">서비스직</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">-</a></li>
 				</ul>
 
 				<!-- Submenu 2-1 -->
