--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -27,7 +27,7 @@
 				<h2 class="dummy-heading">Spec</h2>
 			</div>
 			<div class="bp-header__main">
-				<span class="bp-header__present">portfolio<span class="bp-tooltip bp-icon bp-icon--about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span>
+				<span class="bp-header__present">portfolio</span>
 				<h1 class="bp-header__title">20XX 이정은</h1>
 				<nav class="bp-nav">
 					<a class="bp-nav__item bp-icon bp-icon--prev" href="http://tympanus.net/Blueprints/PageStackNavigation/" data-info="previous Blueprint"><span>Previous Blueprint</span></a>
@@ -51,7 +51,7 @@
 				</ul>
 				<!-- Submenu 1 -->
 				<ul data-menu="submenu-1" id="submenu-1" class="menu__level" tabindex="-1" role="menu" aria-label="학력">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">어린이집</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="#학력x">어린이집</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">초등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">중학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">고등학교</a></li>
@@ -139,6 +139,10 @@
 		</nav>
 		<div class="content">
 			<p class="info">Please choose a category</p>
+			<!-- Ajax loaded content here -->
+		</div>
+		<div class="content" id="학력x">
+			<p class="info">대전 성x</p>
 			<!-- Ajax loaded content here -->
 		</div>
 	</div>
