--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
     <li><a href="https://xowlty.github.io/week11/login3.html" target="_blank">login3</a></li>
     <li><a href="https://xowlty.github.io/week11/login4.html" target="_blank">login4</a></li>
     <li><a href="https://xowlty.github.io/week11/login5.html" target="_blank">login5</a></li>
+    <li><a href="https://xowlty.github.io/week11/memb1.html" target="_blank">memb1</a></li>
+    <li><a href="https://xowlty.github.io/week11/memb2.html" target="_blank">memb2</a></li>
+    <li><a href="https://xowlty.github.io/week11/memb3.html" target="_blank">memb3</a></li>
+    <li><a href="https://xowlty.github.io/week11/memb4.html" target="_blank">memb4</a></li>
+    <li><a href="https://xowlty.github.io/week11/memb5.html" target="_blank">memb5</a></li>
    </ol>
   </li>
  </ul><hr/>
