--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -51,7 +51,7 @@
 				</ul>
 				<!-- Submenu 1 -->
 				<ul data-menu="submenu-1" id="submenu-1" class="menu__level" tabindex="-1" role="menu" aria-label="학력">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="어린이집.html">어린이집</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">어린이집</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">초등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">중학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">고등학교</a></li>
