--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -111,7 +111,7 @@
 
 				<!-- Submenu 5 -->
 				<ul data-menu="submenu-5" id="submenu-5" class="menu__level" tabindex="-1" role="menu" aria-label="동아리">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">/a>교외동아리</li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">교외동아리</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" data-submenu="submenu-5-1" aria-owns="submenu-5-1" href="#">교내동아리</a></li>
 				</ul>
 				
