--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -16,6 +16,10 @@
 	<!-- menu styles -->
 	<link rel="stylesheet" type="text/css" href="component.css" />
 	<script src="modernizr-custom.js"></script>
+	<style>
+		p.어린이집x{max-width: 800em; min-height: 600px; padding: 10em 0 0 0;}
+	</style>
+		
 </head>
 <body>
 	<!-- Main container -->
@@ -51,7 +55,7 @@
 				</ul>
 				<!-- Submenu 1 -->
 				<ul data-menu="submenu-1" id="submenu-1" class="menu__level" tabindex="-1" role="menu" aria-label="학력">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">어린이집</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="#어린이집x">어린이집</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">초등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">중학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">고등학교</a></li>
@@ -139,7 +143,11 @@
 		</nav>
 		<div class="content">
 			<p class="info">Please choose a category</p>
+		</div>
 			<!-- Ajax loaded content here -->
+		<div id="어린이집x">
+			<p class="어린이집x">대전 성x어린이집</p>
+		</div>
 	</div>
 
 	<!-- /view -->
