--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="component.css" />
 	<script src="modernizr-custom.js"></script>
 	<style>
-		p.어린이집x{max-width: 800em; min-height: 600px; padding: 10em 0 0 0;}
+		div#어린이집x{position:absoluete; left:50%; top:50%; transform:translate(-50%, -50%); max-width: 800em; min-height: 600px; padding: 10em 0 0 0;}
 	</style>
 		
 </head>
@@ -146,7 +146,7 @@
 		</div>
 			<!-- Ajax loaded content here -->
 		<div id="어린이집x">
-			<p class="어린이집x">대전 성x어린이집</p>
+			대전 성x어린이집
 		</div>
 	</div>
 
