--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -16,10 +16,6 @@
 	<!-- menu styles -->
 	<link rel="stylesheet" type="text/css" href="component.css" />
 	<script src="modernizr-custom.js"></script>
-	<style>
-		div#어린이집x{position:absoluete; left:50%; top:50%; transform:translate(-50%, -50%); max-width: 800em; min-height: 600px; padding: 10em 0 0 0;}
-	</style>
-		
 </head>
 <body>
 	<!-- Main container -->
@@ -145,8 +141,8 @@
 			<p class="info">Please choose a category</p>
 		</div>
 			<!-- Ajax loaded content here -->
-		<div id="어린이집x">
-			대전 성x어린이집
+		<div class="content">
+			<p id="어린이집x">대전 성x어린이집</p>
 		</div>
 	</div>
 
