--- a/hw/kkkkk.html
+++ b/hw/kkkkk.html
@@ -51,8 +51,8 @@
 				</ul>
 				<!-- Submenu 1 -->
 				<ul data-menu="submenu-1" id="submenu-1" class="menu__level" tabindex="-1" role="menu" aria-label="학력">
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="어린이집.html">어린이집</a></li>
-					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">초등학교</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="#어린이집x">어린이집</a></li>
+					<li class="menu__item" role="menuitem"><a class="menu__link" href="#초등학교x">초등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">중학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">고등학교</a></li>
 					<li class="menu__item" role="menuitem"><a class="menu__link" href="#">대학교</a></li>
@@ -139,6 +139,12 @@
 		</nav>
 		<div class="content">
 			<p class="info">Please choose a category</p>
+		</div>
+		<div class="content">
+			<p id="어린이집x"> 대전 성x어린이집</p>
+		</div>
+		<div class="content">
+			<p id="초등학교x"> 대전 성x초등학교</p>
 		</div>
 			<!-- Ajax loaded content here -->
 	</div>
